--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,6 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -59,5 +58,48 @@
     </style>
 
     <!--  ######################################################################  -->
+
+    <style name="SelectableItemTheme">
+        <item name="colorControlHighlight">@color/colorAccentDark</item>
+    </style>
+
+    <style name="SelectableItemBackground">
+        <item name="android:theme">@style/SelectableItemTheme</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <!--  ######################################################################  -->
+
+    <style name="MyAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:windowTitleStyle">@style/DialogWindowTitle</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="colorControlHighlight">@android:color/darker_gray</item>
+    </style>
+
+    <style name="DialogWindowTitle">
+        <item name="android:textAppearance">@style/TextAppearance.DialogWindowTitle</item>
+    </style>
+
+    <style name="TextAppearance.DialogWindowTitle" parent="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <!--  ######################################################################  -->
+
+    <style name="MyProgressDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:progressBackgroundTint">@color/colorAccentDark</item>
+        <item name="android:progressTint">@color/colorAccent</item>
+        <item name="android:textColorTertiary">@color/colorAccent</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:windowTitleStyle">@style/DialogWindowTitle</item>
+    </style>
+
+    <!--  ######################################################################  -->
+
+    <style name="BorderlessButton" parent="@android:style/Widget.Material.Button.Borderless">
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
 
 </resources>
