implemented getting multitap list of city and some improvements

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -31,7 +31,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <me.kosert.ontap.ui.views.CustomViewPager
+    <me.kosert.ontap.ui.views.MainFragmentViewPager
         android:id="@+id/main_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
