--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,11 +46,9 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
     <!--  ######################################################################  -->
 
-    <style name="MyToolbarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
+    <style name="OntapToolbarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:colorBackground">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/colorAccent</item>
         <item name="colorControlNormal">@color/colorAccent</item>
@@ -70,7 +68,7 @@
 
     <!--  ######################################################################  -->
 
-    <style name="MyAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="OntapAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:windowTitleStyle">@style/DialogWindowTitle</item>
         <item name="android:colorAccent">@color/colorAccent</item>
@@ -87,7 +85,7 @@
 
     <!--  ######################################################################  -->
 
-    <style name="MyProgressDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="OntapProgressDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:progressBackgroundTint">@color/colorAccentDark</item>
         <item name="android:progressTint">@color/colorAccent</item>
         <item name="android:textColorTertiary">@color/colorAccent</item>
