--- a/app/src/main/res/layout/preference_notification.xml
+++ b/app/src/main/res/layout/preference_notification.xml
@@ -26,7 +26,7 @@
             android:ellipsize="marquee"
             android:fadingEdge="horizontal"
             android:singleLine="true"
-            android:text="Enable Notifications"
+            android:text="@string/settings_notifications_text"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@android:color/white"/>
 
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="4"
-            android:text="Get notified about new beers in selected pubs"
+            android:text="@string/settings_notifications_description"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/white"/>
 
