--- a/app/src/main/res/layout/preference_sound.xml
+++ b/app/src/main/res/layout/preference_sound.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="4"
-            android:text="Sound"
+            android:text="@string/settings_sound"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/white"
             android:textSize="14sp"/>
