--- a/app/src/main/res/layout/preference_notification.xml
+++ b/app/src/main/res/layout/preference_notification.xml
@@ -27,7 +27,8 @@
             android:fadingEdge="horizontal"
             android:singleLine="true"
             android:text="@string/settings_notifications_text"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:textColor="@android:color/white"/>
 
         <TextView
