--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -106,6 +106,12 @@
 
                 </android.support.v7.widget.RecyclerView>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/colorPrimaryDark"
+                    android:layout_alignParentBottom="true"/>
+
             </RelativeLayout>
 
             <TextView
