--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -102,7 +102,8 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/settings_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false">
 
                 </android.support.v7.widget.RecyclerView>
 
