--- a/app/src/main/res/layout/listview_beer_row.xml
+++ b/app/src/main/res/layout/listview_beer_row.xml
@@ -67,6 +67,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:gravity="left"
+                android:textDirection="ltr"
                 android:text=""
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
