--- a/app/src/main/res/layout/multitap_info_dialog.xml
+++ b/app/src/main/res/layout/multitap_info_dialog.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
-    android:paddingBottom="3dip"
-    android:paddingEnd="3dip"
-    android:paddingStart="3dip"
-    android:paddingTop="9dip">
+    android:paddingBottom="3dp"
+    android:paddingEnd="3dp"
+    android:paddingStart="3dp"
+    android:paddingTop="9dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,10 +19,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="9dip"
-            android:layout_marginEnd="10dip"
-            android:layout_marginStart="10dip"
-            android:layout_marginTop="6dip"
+            android:layout_marginBottom="9dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="6dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -106,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_star_border_24dp"
                 android:text="@string/menu_star"/>
 
@@ -116,6 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_notification_off_24dp"
                 android:text="@string/menu_follow"/>
 
@@ -126,6 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_map_24dp"
                 android:text="@string/dialog_map"/>
 
@@ -136,6 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_public_black_24dp"
                 android:text="@string/dialog_website"/>
 
@@ -146,6 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_facebook_messenger"
                 android:text="@string/dialog_messenger"/>
 
@@ -156,6 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_phone_24dp"
                 android:text="@string/dialog_call"/>
         </LinearLayout>
